--- a/gb/24/1/8/n14153829.md
+++ b/gb/24/1/8/n14153829.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>糟糕了！美国房价又要飙起来？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/01/id14153837-a7c3f6ef4342b3ebe236d78cf09bb1b5-600x400.jpeg" />///image2=```diff
 - 2024年的美国地产市场可能又要飙涨一番。（Shutterstock）
@@ -8,21 +8,21 @@
 <h6>2024年的美国地产市场可能又要飙涨一番。（Shutterstock）
 </h6>
 <hr>
-	<p>【大纪元2024年01月08日讯】由于全美待售房屋的持续缺乏，2023年10月份，标普-凯斯席勒<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7.md#1">房价</a>指数又出现新高点，全美指数年涨幅达到4.8%。11月份，销售量也因为<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%88%A9%E7%8E%87.md#1">利率</a>走低，出现回暖迹象。怎么办！难道美国房价又要飙起来吗？！新年一开始，我们马上来看一下，去年底的美国房地产市场表现，观察新年，看看市场到底会不会又砸下一个震撼弹！（本文是上周地产文章<ahref=><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147094.md#1" target="_blank" rel="noopener noreferrer">“10月全美房价再次新高 11月销售终止五连跌”</a>的视频更新版本）</p>
-<h2><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7.md#1">房价</a>指数创新高</h2>
+	<p>【大纪元2024年01月08日讯】由于全美待售房屋的持续缺乏，2023年10月份，标普-凯斯席勒房价指数又出现新高点，全美指数年涨幅达到4.8%。11月份，销售量也因为利率走低，出现回暖迹象。怎么办！难道美国房价又要飙起来吗？！新年一开始，我们马上来看一下，去年底的美国房地产市场表现，观察新年，看看市场到底会不会又砸下一个震撼弹！（本文是上周地产文章<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/23/12/30/n14147094.md#1" target="_blank" rel="noopener noreferrer">“10月全美房价再次新高 11月销售终止五连跌”</a>的视频更新版本）</p>
+<h2>房价指数创新高</h2>
 <p>另外，在10个最大城市和20个最大城市的综合指数表现，分别也上涨5.7%和4.9%。但是，3个指数的环比增幅有些放缓，不过同比涨幅均高于9月份。</p>
-<p>10月份的数据同时也追踪了8月和9月，在这个期间的抵押贷款<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%88%A9%E7%8E%87.md#1">利率</a>，从8月的6.9%，大幅攀升至10月底的7.8%。因为利率飙升，阻挡了许多买家的动力，直接导致10月份的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%90%E5%B1%8B%E9%94%80%E5%94%AE.md#1">成屋销售</a>量，跌至13年来的新低点。</p>
+<p>10月份的数据同时也追踪了8月和9月，在这个期间的抵押贷款利率，从8月的6.9%，大幅攀升至10月底的7.8%。因为利率飙升，阻挡了许多买家的动力，直接导致10月份的成屋销售量，跌至13年来的新低点。</p>
 <p>我们看到房价成长最快的地区，通常出现在东北部和中西部的市场，其中底特律已经连续两个月位居榜首，10月份年涨幅达到8.1%。另外，圣地亚哥达到7.2%、纽约是7%，分别位居房价涨幅的第二、第三名。</p>
 <p>标普-凯斯席勒还指出，10月份10大城市、20大城市和全美房价指数，都保持在历史高位，而且20大城市中有8个城市，也创下历史新高，分别是：迈阿密、亚特兰大、芝加哥、波士顿、底特律、夏洛特、纽约和克利夫兰。</p>
 <p>就连在西南部地区的凤凰城和拉斯维加斯，这两个城市在2022年利率狂涨之后，就一直面临房价下降的风险，但是如今它们的涨幅已经实现同比增长的情况，凤凰城上涨.0.9%，拉斯维加斯上涨0.1%。</p>
 <p>10月份唯一一个房价指数下跌的城市，是俄勒冈州的波特兰，房价指数小幅下降0.6%。</p>
 <p>以上这些城市涨幅，与房地产市场的最新趋势，例如Realtor.com的11月最热门市场报告，以及租赁市场的观察结果是一致的。</p>
-<p><span style="color: #0000ff;">OMG!!! 2024年美国房市起手式 这么猛！今年“多次<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%99%8D%E6%81%AF.md#1">降息</a>”？先别高兴太早｜5个原因 专家呼吁快进场【<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%9C%B0%E4%BA%A7.md#1">美国地产</a>热点】第142集</span><br />
-<a title="YouTube video player" src=""></a><a href="https://d1lulvfep8g527.cloudfront.net/O3mDxTMbc"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/LZu6YGHrpEs?si=Q7oluhbQ-y3FNR11" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><span style="color: #0000ff;">OMG!!! 2024年美国房市起手式 这么猛！今年“多次降息”？先别高兴太早｜5个原因 专家呼吁快进场【美国地产热点】第142集</span><br />
+<a title="YouTube video player" src=""></a><a href="https://dl1ez95kskssm.cloudfront.net/T2aN6j1ou"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/LZu6YGHrpEs?si=Q7oluhbQ-y3FNR11" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>负担能力改善的主要原因</h2>
 <p>Realtor.com的11月份租金趋势报告显示，更强劲的当地经济，还有更有利的负担能力，都在推动这些地区的价格上涨。推动负担能力改善的主要原因，其实就是最近连续好几周以来的利率下降。</p>
 <p>最近几周抵押贷款利率发生了重大转变， 30年固定利率从10月底开始显着下滑，至7%以下。这个下降幅度跟2022年11月到2023年2月的降幅有点相似，期间利率相差一个百分点，今年也有相同的情况，而且陡降幅度更大。</p>
-<h2>联准会要<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%99%8D%E6%81%AF.md#1">降息</a>了吗？</h2>
+<h2>联准会要降息了吗？</h2>
 <p>不过，两者下降的时空背景并不相同，今年的下调主要跟美国通货膨胀的显着下降很有关系，市场正在预期联准会开始降息，根据1月3日，联准会发布的议息会议纪录显示，联邦基金利率可能处于或接近峰值，将在一段时期内继续保持限制性，但预期今年年底前将会有多次减息。</p>
 <p>不过先别太早高兴，联准会的官员也讨论了何时给出调整资产负债表政策的讯号，但是，纪录同时也指出政策路径的“高度不确定性”，一些官员认为，如果通胀不符预期，可能有必要将利率维持在较高水平，根据经济情况的发展，仍然有可能会进一步加息。</p>
 <p>在1月3日截稿前，公布的美国12月ISM制造业指数由46.7升至47.4，超预期的47.1，其中ISM销售价格指数由49.9大跌至45.2，新订单由48.3跌至47.1，低于预期的49.1。就业指数由45.8升至48.1；美国12月职位空缺由885.2万缩至879万，低于预期的882.1万。简单说，这几项经济数据是好坏参半，美国经济软着陆的可能性还是颇大。</p>
@@ -30,7 +30,7 @@
 <p>但是，今年的经济还是受到地缘政治、股债市等因素的影响，存在很高的不确定性，有待观察后续的发展，才能确定升降息的可能性。</p>
 <h2>买气上涨 供给改善</h2>
 <p>话说回来，这波抵押贷款利率的下降，尚未转化为房市销售的大幅复苏，但11月成房销售，已经出现5个月来的首次增长。这表明如果利率能够保持近期的下降，买家需求可能足以推动房屋销售，出现年末到年初房市淡季的强劲表现。</p>
-<p>根据全美房地产经纪人协会11月的销售报告显示，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%90%E5%B1%8B%E9%94%80%E5%94%AE.md#1">成屋销售</a>较上个月微升0.8%，经季节性调整后的年率达到382万套，结束了连续5个月的下降。但是，销售量仍然较一年前下降7.3%。</p>
+<p>根据全美房地产经纪人协会11月的销售报告显示，成屋销售较上个月微升0.8%，经季节性调整后的年率达到382万套，结束了连续5个月的下降。但是，销售量仍然较一年前下降7.3%。</p>
 <p>至于，成屋销售价格中位数比2022年11月上涨4.0%，至387,600美元，也出现连续第5个月的价格同比上涨。</p>
 <p>11月底，成房库存较上个月下降1.7%，有113万套可售房产，相当于3.5个月的供应量，还是一个偏向卖方市场的格局。</p>
 <p>再来，我们可以观察11月份的前瞻房市数据，待过户交易数量（Pending home sales）的表现，11月待过户房屋销售量与10月相同，比去年同期下降5.2%，东北部、中西部和西部地区的交易量出现月增长，而南部地区则出现亏损。不过，所有四个地区的交易量均较去年同期下降。</p>
@@ -46,37 +46,33 @@
 	
 <hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/11/n14114368.md#1">美国新房建筑趋势 建商刺激销售</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14120328.md#1">拜登住房行动： 数百亿援助建商 修建住房</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/4/n14129667.md#1">专家预测 房价与利率有机会下跌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131033.md#1">美房地产协会预测：明年21个都市房价跌幅较大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">5合1防滑金属毛衣衣架（限时优惠）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/11/n14114368.md#1">美国新房建筑趋势 建商刺激销售</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/20/n14120328.md#1">拜登住房行动： 数百亿援助建商 修建住房</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/4/n14129667.md#1">专家预测 房价与利率有机会下跌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/6/n14131033.md#1">美房地产协会预测：明年21个都市房价跌幅较大</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/12/19/n9970786.md#1" target="_blank">明白人：“平型关大捷”的真相</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/4/25/n11213689.md#1" target="_blank">浪子回头金不换?却遭十年牢狱灾</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/14/n11257250.md#1" target="_blank">【征文】凌晓辉：贞洁论（五）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/27/n10092593.md#1" target="_blank">大学教授修炼身心受益 反迫害控告江泽民</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/5/n14151381.md#1">【未解之谜】中西预言2024出大事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14143930.md#1">昭昭天意——管窥预言中的后中共时代及未来（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144838.md#1">星空高远万重天 世人多是天上来（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/1/n14148869.md#1">【未解之谜】龙年特辑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/3/n14150138.md#1">台湾小将李任悦登桌球U13组世界第一</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/6/n14152636.md#1">【秦鹏观察】“萝莉岛”名单真假辩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/6/n14152564.md#1">【时事军事】西部沙漠“航母” 让中共露出马脚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/6/n14152154.md#1">【新闻看点】许其亮悬了？杨刘洋离世真相浮出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/6/n14152508.md#1">美情报显示中共导弹装水 习近平震怒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/6/n14152055.md#1">专家：中共GDP造假 经济将持续走衰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/6/n14152241.md#1">消息：习藉毛威胁 红二代若再反对将现文革</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/6/n14152631.md#1">好莱坞男星奥列佛坠机身亡 父女3人全罹难</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/6/n14152598.md#1">被水果摊主当成50多岁 林心如表情举止崩溃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/5/n14151939.md#1">孙燕姿妹妹发文断绝关系 消息登上微博热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/5/n14151920.md#1">香港前TVB主播柳俊江烧炭身亡 终年42岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/5/n14151970.md#1">胡歌曾动念5年不拍戏 原因竟然与王家卫有关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：儿时读书的乐趣 纯棉被套大优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/7/n14152938.md#1">研究：老人睡觉时闻香味 记忆力有惊人改善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/6/n14152299.md#1">应该跟酒说拜拜的5个理由 让专家告诉你</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14137972.md#1">蜂蜜怎么吃最管用？百年中医家族公开16种妙用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/3/n14150006.md#1">7类药物最伤肾 医: 5个信号说明肾脏受损</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276161.md#1">【古道人生】商人只重利？义气干霄的商人在这里</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283716.md#1">【新闻大破解】启动无锚印钞？红朝末象总爆发</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283950.md#1">【时事金扫描】中东新战争？真主党轰以色列</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283947.md#1">【新闻五人行】大陆金融女学霸轻生 全网痛议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283509.md#1">英国民宅天花板上藏18万只蜜蜂 7年没人知</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283104.md#1">逛Costco时五种令员工和购物者恼火的行为</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283044.md#1">《繁花》在大陆爆红 香港收视率却触底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282327.md#1">吴亦凡入狱3年 网传其母欲卖豪车换现金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282430.md#1">郑爽未履行金额超1亿 剧集出品方股权被冻结</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283097.md#1">世界小姐张梓琳晒带娃照 称8岁长女是苗条姐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282363.md#1">赚多少钱才够 赚多少才算富人 美国人有答案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273401.md#1">如何规划退休生活？简化生活 让身心受益</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282796.md#1">什么是“金钱畸形症”？ 如何应对？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280784.md#1">告别湿答答 内外除湿这样做</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281348.md#1">日本北海道之旅 难忘的农庄餐馆</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/8/n14153829.htm">糟糕了！美国房价又要飙起来？</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/1/8/n14153829.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/1/8/n14153829.htm">糟糕了！美国房价又要飙起来？</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/1/8/n14153829.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
